--- a/index_page/index.css
+++ b/index_page/index.css
@@ -8,8 +8,8 @@
   width: 721px;
   height: 800px;
   position: absolute;
-  left: 1070px;
-  top: 100px;
+  margin-left: 60%;
+  margin-top: 0%;
 }
 
 .about_us_t {
