--- a/header.css
+++ b/header.css
@@ -1,4 +1,4 @@
-header {
+/* header {
     margin-top: 1%;
     height: 75px;
     width: 70%;
@@ -8,9 +8,62 @@ header {
     margin-left: auto;
     margin-right: auto;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+} */
+
+.navigation {
+    margin-top: 1.5%;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    width: 70%;
+    height: 75px;
+    align-items: center;
+    justify-content: space-around;
+    background-color: #f3f3f3;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 55px;
 }
 
-.Header_Logo {
+.best_for_best_img {
+    width: 130px;
+    height: 75px;
+}
+
+.navigation ul {
+    align-items: center;
+    display: flex;
+    gap: 30px;
+}
+
+.navigation ul, li, a {
+    font-family: 'Montserrat';
+    color: black;
+    text-decoration: none;
+    list-style: none;
+    font-size: 20px;
+    transition: ease-in-out .4s;
+}
+
+.navigation a:hover {
+    color: #4AA453;
+}
+
+.prikol_1_nav {
+    margin-top: -7px;
+    padding-left: 100px;
+    width: 33px;
+    height: 33px;
+}
+
+.prikol_nav img  {
+    margin-top: -1px;
+    margin-left: 25px;
+    width: 30px;
+    height: 30px;
+}
+
+
+/*.Header_Logo {
     width: 130px;
     margin-top: 1.1%;
     margin-left: 4%;
@@ -80,4 +133,4 @@ header {
 
 .Find_Button img:hover {
     cursor: pointer;
-}
+} */
