--- a/index_page/index.css
+++ b/index_page/index.css
@@ -5,7 +5,6 @@
 }
 
 .about_us {
-  background: url(/index_page/img/background.png);
   height: 776px;
 }
 
@@ -39,8 +38,8 @@
 .about_us_b {
   margin-left: 15%;
   background: #4AA453;
-  width: 346px;
-  height: 74px;
+  width: 316px;
+  height: 59px;
   border: none;
   border-radius: 55px;
 }
@@ -48,9 +47,13 @@
 .about_us_b a {
   font-family: 'Poppins';
   font-weight: medium;
-  font-size: 32px;
+  font-size: 25px;
   text-decoration: none;
   color: white;
+}
+
+.about_us_img {
+  padding-top: 5px;
 }
 
 .scroll_down img {
