--- a/index_page/index.css
+++ b/index_page/index.css
@@ -164,6 +164,7 @@
 }
 
 .Site_News {
+  margin-top: 10%;
   font-family: 'Poppins', sans-serif;
   font-weight: 700;
   font-size: 32px;
@@ -181,7 +182,7 @@
 }
 
 .News_Bck {
-  margin-top: 5%;
+  margin-top: 3%;
   display: flex;
   justify-content: center;
   margin-bottom: 5%;
@@ -193,6 +194,14 @@
   height: 400px;
   border: #cdcdcd 1px solid;
   border-radius: 50px;
+  color: black;
+  transition: ease-in-out .3s;
+}
+
+.news_collapse h2:hover {
+  transition: ease-in-out .3s;
+  color: gray;
+  cursor: default;
 }
 
 .news_collapse img {
@@ -216,4 +225,10 @@
   background: #111111;
   border-radius: 30px;
   color: white;
+}
+
+.news_collapse p {
+  color: #111111;
+  cursor: default;
+  font-weight: 600;
 }
